--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,24 +26,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter Name"
+            android:textAlignment="center"
+            android:layout_margin="20dp"
             android:id="@+id/register_Name"
             />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter Email"
+            android:inputType="textEmailAddress"
+            android:textAlignment="center"
+            android:layout_margin="20dp"
             android:id="@+id/register_Email"
             />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter Password"
+            android:layout_margin="20dp"
+            android:textAlignment="center"
+            android:inputType="textPassword"
             android:id="@+id/register_password"
             />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter Contact Number"
+            android:textAlignment="center"
+            android:layout_margin="20dp"
+            android:inputType="phone"
             android:id="@+id/register_PhoneNumber"
             />
 
@@ -62,6 +73,8 @@
             android:text="SignUp"
             android:textAllCaps="false"
             android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:onClick="Register"
             />
 
