--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,87 +6,111 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
+    android:padding="16dp"
+    android:weightSum="10"
     android:gravity="center_horizontal">
 
-    <TextView
-        android:layout_margin="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        style="@style/TextAppearance.AppCompat.Title"/>
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_margin="20dp">
-
-        <EditText
-            android:layout_margin="20dp"
-            android:id="@+id/loginemail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:hint="Email Address"
-            android:textAlignment="center"/>
-        <EditText
-            android:layout_margin="20dp"
-            android:id="@+id/passwordemail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="Password"
-            android:textAlignment="center"/>
+        android:layout_weight="6"
+        android:layout_height="0dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp">
-            <CheckBox
-                android:id="@+id/stayconnected"
-                android:layout_width="wrap_content"
-                android:paddingLeft="10dp"
-                android:layout_height="50dp"
-                android:button="@drawable/custom_checkbox"
-                android:text="Stay Connected"/>
+            android:layout_centerVertical="true"
+            android:orientation="vertical"
+            >
+
+            <EditText
+                android:id="@+id/loginemail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="Login/Email"
+                android:textColor="@color/blackColor"
+                android:padding="12dp"
+                android:layout_marginTop="30dp"
+                android:textAlignment="center"/>
+            <EditText
+                android:id="@+id/passwordemail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textColor="@color/blackColor"
+                android:hint="Password"
+                android:padding="12dp"
+                android:layout_marginTop="12dp"
+                android:textAlignment="center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                >
+                <CheckBox
+                    android:id="@+id/stayconnected"
+                    android:layout_width="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:layout_height="50dp"
+                    android:textColor="@color/blackColor"
+                    android:button="@drawable/custom_checkbox"
+                    android:text="Stay Connected"/>
+            </LinearLayout>
         </LinearLayout>
+    </RelativeLayout>
 
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4"
+        >
         <LinearLayout
-            android:layout_margin="20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
+            android:layout_centerVertical="true"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textAlignment="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Don't Have An Account ?"
+                    android:textColor="@color/blackColor"
+                    android:textStyle="bold"
+                    />
+                <TextView
+                    android:id="@+id/createaccount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text=" Sign Up"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimaryDark"
+                    />
+
+            </LinearLayout>
+            <Button
+                android:id="@+id/buttlogin"
+                android:layout_margin="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/whiteColor"
+                android:textAllCaps="false"
+                android:background="@drawable/button_bg"
+                android:text="Login"/>
             <TextView
-                android:layout_marginTop="40dp"
                 android:id="@+id/forgetpassword"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text=""
-                android:textStyle=""
-                android:layout_weight="1"
+                android:text="Forgot Password"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
                 android:textAlignment="center"/>
-            <TextView
-                android:layout_marginTop="40dp"
-                android:id="@+id/createaccount"
-                android:textAlignment="center"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text=""
-                android:textStyle=""
-                android:layout_weight="1"/>
         </LinearLayout>
-
-        <Button
-            android:id="@+id/buttlogin"
-            android:layout_margin="40dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Login"/>
-
-
-    </LinearLayout>
-
-
-
+    </RelativeLayout>
 </LinearLayout>
