--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
         android:src="@drawable/ic_add_black_24dp"
         app:fabSize="normal"
         app:elevation="6dp"
-        android:id="@+id/floatingaction"
+        android:id="@+id/fab"
         android:visibility="gone"/>
 
 </android.support.design.widget.CoordinatorLayout>
