fragment updated + floating

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF5b3a</color>
 =======
 
+    <color name="holo_red_dark">#ffcc0000</color>
     <color name="whiteColor">#FFFFFF</color>
     <color name="blackColor">#2B2A2A</color>
     <color name="greenColor">#4CAF50</color>
