--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,98 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:layout_margin="20dp"
+    android:orientation="vertical"
+    android:weightSum="4"
     tools:context=".SignUpActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter Name"
-            android:inputType="textPersonName"
-            android:id="@+id/register_Name"
-            android:textAlignment="center"
-            android:textColor="@color/blackColor"
-            android:padding="12dp"
-            />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter Email"
-            android:id="@+id/register_Email"
-            android:textAlignment="center"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/blackColor"
-            android:padding="12dp"
-            android:layout_marginTop="10dp"
-            />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter Password"
-            android:id="@+id/register_password"
-            android:textAlignment="center"
-            android:textColor="@color/blackColor"
-            android:inputType="textPassword"
-            android:padding="12dp"
-            android:layout_marginTop="10dp"
-            />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter Contact Number"
-            android:id="@+id/register_PhoneNumber"
-            android:textAlignment="center"
-            android:textColor="@color/blackColor"
-            android:padding="12dp"
-            android:layout_marginTop="10dp"
-            android:inputType="phone"
-            />
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <fragment
+            android:id="@+id/fragment1"
+            android:name="com.khan.serviceprovider.signup_personal_information"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="40dp"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textAlignment="center"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Already Have An Account ?"
-                android:textColor="@color/blackColor"
-                android:textStyle="bold"
-                />
-            <TextView
-                android:id="@+id/createaccount"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text=" Login"
-                android:textColor="@color/colorPrimaryDark"
-                android:onClick="GoToLogin"
-                android:textStyle="bold"
-                />
+            android:layout_height="match_parent"></fragment>
 
-        </LinearLayout>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:orientation="vertical">
+
+
+
+        <com.baoyachi.stepview.HorizontalStepView
+            android:id="@+id/step_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SignUp"
-            android:textAllCaps="false"
-            android:layout_marginTop="20dp"
-            android:onClick="Register"
-            android:background="@drawable/button_bg"
             android:layout_margin="20dp"
-            android:textColor="@color/whiteColor"
-            />
+            android:background="@drawable/button_bg"
+            android:onClick="Register"
+            android:text="Next"
+            android:textAllCaps="false"
+            android:textColor="@color/whiteColor" />
 
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
