--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                 android:layout_marginTop="20dp"
                 >
                 <CheckBox
-                    android:id="@+id/stayconnected"
+                    android:id="@+id/login_CheckBox"
                     android:layout_width="wrap_content"
                     android:paddingLeft="10dp"
                     android:layout_height="50dp"
