--- a/app/src/main/res/layout/custom_item_list.xml
+++ b/app/src/main/res/layout/custom_item_list.xml
@@ -3,18 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="5dp"
+
     android:orientation="vertical">
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/colorPrimary"
-        app:cardCornerRadius="10dp"
-        >
+        app:cardCornerRadius="20dp"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="2dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="8dp"
+            android:padding="5dp"
             >
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -22,8 +23,8 @@
                 android:layout_centerInParent="true"
                 >
                 <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="90dp"
+                    android:layout_height="80dp"
                     android:src="@mipmap/ic_launcher"
                     android:layout_centerHorizontal="true"
                     android:id="@+id/custom_itemImage"
@@ -34,9 +35,9 @@
                     android:layout_below="@+id/custom_itemImage"
                     android:layout_centerHorizontal="true"
                     android:textColor="@color/whiteColor"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="2dp"
                     android:text="Item 1"
-                    android:textStyle="bold"
+                    android:textSize="13sp"
                     android:id="@+id/custom_ItemName"
 
                     />
