--- a/app/src/main/res/layout/fragment_addresses_fragment.xml
+++ b/app/src/main/res/layout/fragment_addresses_fragment.xml
@@ -3,12 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context=".addresses_fragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content">
+
+
+    </LinearLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_bg"
+        android:text="Add New Address"
+        android:textColor="#fff"
+        android:layout_margin="20dp"
+        android:id="@+id/add_new"
+        android:layout_gravity="center|bottom"/>
+
 
 </FrameLayout>
