--- a/app/src/main/res/layout/fragment_payment_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_methods.xml
@@ -2,13 +2,43 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#ffffff"
     android:layout_height="match_parent"
-    tools:context=".payment_methods">
+    tools:context=".payment_methods"
+    >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:gravity="center"
+        android:padding="20dp"
+        android:weightSum="3">
+
+        <Button
+            android:id="@+id/credit"
+            android:textStyle="bold"
+            android:text="Credit Card"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
+        <Button
+            android:layout_marginTop="5dp"
+            android:id="@+id/debit"
+            android:textStyle="bold"
+            android:text="Debit Card"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
+        <Button
+            android:layout_marginTop="5dp"
+            android:id="@+id/paypal"
+            android:textStyle="bold"
+            android:text="Paypal"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
+
+    </LinearLayout>
 
 </FrameLayout>
