--- a/app/src/main/res/layout/fragment_signup_personal_information.xml
+++ b/app/src/main/res/layout/fragment_signup_personal_information.xml
@@ -9,104 +9,123 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_margin="10dp"
-        android:layout_height="wrap_content">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_margin="10dp"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/ic_launcher_background"
-            app:civ_border_color="#FD3D16"
-            android:id="@+id/profileImage"
-            app:civ_border_width="1dp"/>
-    <EditText
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter Name"
-        android:inputType="textPersonName"
-        android:id="@+id/register_Name"
-        android:textAlignment="center"
-        android:textColor="@color/blackColor"
-        android:padding="12dp"
-        />
-    <EditText
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter Email"
-        android:id="@+id/register_Email"
-        android:textAlignment="center"
-        android:inputType="textEmailAddress"
-        android:textColor="@color/blackColor"
-        android:padding="12dp"
-        android:layout_marginTop="10dp"
-        />
-    <EditText
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter Password"
-        android:id="@+id/register_password"
-        android:textAlignment="center"
-        android:textColor="@color/blackColor"
-        android:inputType="textPassword"
-        android:padding="12dp"
-        android:layout_marginTop="10dp"
-        />
-    <EditText
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter Contact Number"
-        android:id="@+id/register_PhoneNumber"
-        android:textAlignment="center"
-        android:textColor="@color/blackColor"
-        android:padding="12dp"
-        android:layout_marginTop="10dp"
-        android:inputType="phone"
-        />
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <ScrollView
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textAlignment="center"
-                android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Already Have An Account ?"
-                android:textColor="@color/blackColor"
-                android:textStyle="bold"
-                />
-            <TextView
-                android:id="@+id/btnCreateAccount"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text=" Login"
-                android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold"
-                tools:ignore="OnClick" />
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_margin="10dp"
+                    android:layout_height="wrap_content">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_margin="10dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/ic_launcher_background"
+                        app:civ_border_color="#FD3D16"
+                        android:id="@+id/profileImage"
+                        app:civ_border_width="1dp"/>
+                    <EditText
+                        android:layout_margin="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Enter Name"
+                        android:inputType="textPersonName"
+                        android:id="@+id/register_Name"
+                        android:textAlignment="center"
+                        android:textColor="@color/blackColor"
+                        android:padding="12dp"
+                        />
+                    <EditText
+                        android:layout_margin="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Enter Email"
+                        android:id="@+id/register_Email"
+                        android:textAlignment="center"
+                        android:inputType="textEmailAddress"
+                        android:textColor="@color/blackColor"
+                        android:padding="12dp"
+                        android:layout_marginTop="10dp"
+                        />
+                    <EditText
+                        android:layout_margin="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Enter Password"
+                        android:id="@+id/register_password"
+                        android:textAlignment="center"
+                        android:textColor="@color/blackColor"
+                        android:inputType="textPassword"
+                        android:padding="12dp"
+                        android:layout_marginTop="10dp"
+                        />
+                    <EditText
+                        android:layout_margin="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Enter Contact Number"
+                        android:id="@+id/register_PhoneNumber"
+                        android:textAlignment="center"
+                        android:textColor="@color/blackColor"
+                        android:padding="12dp"
+                        android:layout_marginTop="10dp"
+                        android:inputType="phone"
+                        />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:gravity="center_horizontal"
+                        android:layout_marginTop="20dp"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:textAlignment="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Already Have An Account ?"
+                            android:textColor="@color/blackColor"
+                            android:textStyle="bold"
+                            />
+                        <TextView
+                            android:id="@+id/btnCreateAccount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text=" Login"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textStyle="bold"
+                            tools:ignore="OnClick" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="Update"
-            android:textStyle="bold"
-            android:textAllCaps="false"
-            android:layout_gravity="end|bottom"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/button_bg"
-            android:layout_margin="10dp"
-            android:id="@+id/btnRegister"
-            android:textColor="@color/whiteColor"
-            />
+                    </LinearLayout>
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Update"
+                        android:textStyle="bold"
+                        android:textAllCaps="false"
+                        android:layout_gravity="end|bottom"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:background="@drawable/button_bg"
+                        android:layout_margin="10dp"
+                        android:id="@+id/btnRegister"
+                        android:textColor="@color/whiteColor"
+                        />
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
 </FrameLayout>
