--- a/app/src/main/res/layout/activity_car_gas_refuel.xml
+++ b/app/src/main/res/layout/activity_car_gas_refuel.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:weightSum="10"
-    android:id="@+id/carWashLayout"
-    tools:context=".CarWash">
+    android:id="@+id/carGasRefuel"
+    android:orientation="vertical"
+    tools:context=".CarGasRefuelActivity">
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,7 +16,7 @@
         android:layout_weight="1"
         >
         <include layout="@layout/custom_toolbar"
-            android:id="@+id/toolbar_carWash">
+            android:id="@+id/toolbar_carRefuel">
         </include>
     </RelativeLayout>
 
@@ -35,7 +36,7 @@
             <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/spinner_carwash"
+                android:id="@+id/spinner_carFuelType"
                 >
             </Spinner>
             <View
@@ -43,42 +44,25 @@
                 android:layout_height="1dp"
                 android:background="@color/blackColor"
                 />
-            <RelativeLayout
+
+            <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/spinner_carFuelGrade"
                 android:layout_marginTop="20dp"
-                android:id="@+id/carwash_calendar"
                 >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="Data and Time"
-                    android:layout_centerVertical="true"
-                    android:paddingStart="8dp"
-                    android:id="@+id/carwash_datAndTime"
-                    android:textColor="@color/blackColor"
-                    />
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/calender"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    />
-
-            </RelativeLayout>
+            </Spinner>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/blackColor"
-                android:layout_marginTop="5dp"
                 />
 
             <TextView
-                android:layout_marginTop="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Time Window: 2:00 PM - 4:00 PM"
+                android:text="Fuel to be charged seperately after gas fill"
+                android:layout_marginTop="20dp"
                 />
 
         </LinearLayout>
@@ -110,11 +94,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="$0"
+                    android:text="$35"
                     android:layout_alignParentEnd="true"
                     android:textStyle="bold"
                     android:layout_margin="5dp"
-                    android:id="@+id/txt_DryCleanCost"
+                    android:id="@+id/txt_carRefuelCost"
                     />
 
             </RelativeLayout>
@@ -124,12 +108,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@drawable/button_bg"
-            android:text="Order Car Wash"
+            android:text="Order Refuel"
             android:textAllCaps="false"
             android:textColor="@color/whiteColor"
             android:layout_marginBottom="20dp"
             android:id="@+id/carwash_btnOrderWash"
-            android:onClick="Button_OrderCarwash"
+            android:onClick="Button_OrderRefuel"
             />
     </RelativeLayout>
+
 </LinearLayout>
