--- a/app/src/main/res/layout/custom_item_list.xml
+++ b/app/src/main/res/layout/custom_item_list.xml
@@ -11,7 +11,8 @@
         app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="20dp"
         app:cardUseCompatPadding="true"
-        app:cardElevation="2dp">
+        app:cardElevation="2dp"
+        >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
