--- a/app/src/main/res/layout/fragment_one_time_cleaning.xml
+++ b/app/src/main/res/layout/fragment_one_time_cleaning.xml
@@ -1,53 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="10"
-    android:id="@+id/carWashLayout"
-    tools:context=".CarWash">
+    android:id="@+id/oneTimeClean"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".OneTimeCleaningFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        >
-        <include layout="@layout/custom_toolbar"
-            android:id="@+id/toolbar_carWash">
-        </include>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="6"
+        android:layout_height="match_parent"
         android:padding="16dp"
         >
+
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_height="match_parent">
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="50dp"/>
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/spinner_carwash"
-                >
-            </Spinner>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/blackColor"
-                />
+            >
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:id="@+id/carwash_calendar"
+                android:id="@+id/cleanServiceOneTime_Calendar"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -55,7 +30,7 @@
                     android:hint="Data and Time"
                     android:layout_centerVertical="true"
                     android:paddingStart="8dp"
-                    android:id="@+id/carwash_datAndTime"
+                    android:id="@+id/cleanServiceOneTime_datAndTime"
                     android:textColor="@color/blackColor"
                     />
                 <ImageButton
@@ -74,27 +49,15 @@
                 android:layout_marginTop="5dp"
                 />
 
-            <TextView
-                android:layout_marginTop="50dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Time Window: 2:00 PM - 4:00 PM"
-                />
-
         </LinearLayout>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:padding="16dp"
-        >
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/btn_CleanServiceOneTime"
+            android:layout_marginBottom="20dp"
             app:cardCornerRadius="10dp"
             >
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -114,22 +77,22 @@
                     android:layout_alignParentEnd="true"
                     android:textStyle="bold"
                     android:layout_margin="5dp"
-                    android:id="@+id/txt_DryCleanCost"
+                    android:id="@+id/txt_oneTimeCleanCost"
                     />
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:background="@drawable/button_bg"
-            android:text="Order Car Wash"
+            android:layout_alignParentBottom="true"
+            android:text="Request One Time Clean"
             android:textAllCaps="false"
             android:textColor="@color/whiteColor"
-            android:layout_marginBottom="20dp"
-            android:id="@+id/carwash_btnOrderWash"
-            android:onClick="Button_OrderCarwash"
+            android:id="@+id/btn_CleanServiceOneTime"
             />
     </RelativeLayout>
-</LinearLayout>
+
+</FrameLayout>
