--- a/app/src/main/res/layout/fragment_addresses_fragment.xml
+++ b/app/src/main/res/layout/fragment_addresses_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,22 +7,23 @@
     tools:context=".addresses_fragment">
 
 
-    <LinearLayout
-        android:orientation="vertical"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:id="@+id/myrecv"
+        android:layout_above="@id/add_new"></androidx.recyclerview.widget.RecyclerView>
 
-
-    </LinearLayout>
     <Button
+
+        android:id="@+id/add_new"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+       android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"
         android:background="@drawable/button_bg"
         android:text="Add New Address"
-        android:textColor="#fff"
-        android:layout_margin="20dp"
-        android:id="@+id/add_new"
-        android:layout_gravity="center|bottom"/>
+        android:textColor="#fff" />
 
 
-</FrameLayout>
+</RelativeLayout>
